@@ -2,26 +2,29 @@ package com.sonic.simple.services.impl;
 
 import com.alibaba.fastjson.JSONArray;
 import com.alibaba.fastjson.JSONObject;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.extension.conditions.query.LambdaQueryChainWrapper;
+import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.sonic.simple.mapper.*;
+import com.sonic.simple.models.base.CommentPage;
+import com.sonic.simple.models.base.TypeConverter;
+import com.sonic.simple.models.domain.*;
+import com.sonic.simple.models.dto.*;
 import com.sonic.simple.models.http.RespEnum;
 import com.sonic.simple.models.http.RespModel;
-import com.sonic.simple.dao.GlobalParamsRepository;
-import com.sonic.simple.dao.TestSuitesRepository;
-import com.sonic.simple.models.*;
 import com.sonic.simple.models.interfaces.CoverType;
 import com.sonic.simple.models.interfaces.DeviceStatus;
 import com.sonic.simple.models.interfaces.ResultStatus;
 import com.sonic.simple.netty.NettyServer;
 import com.sonic.simple.services.*;
+import com.sonic.simple.services.impl.base.SonicServiceImpl;
+import com.sonic.simple.tools.BeanTool;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
-import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.util.ObjectUtils;
 
-import javax.persistence.criteria.Predicate;
 import java.util.*;
+import java.util.stream.Collectors;
 
 /**
  * @author ZhouYiXun
@@ -29,58 +32,55 @@ import java.util.*;
  * @date 2021/8/20 17:51
  */
 @Service
-public class TestSuitesServiceImpl implements TestSuitesService {
-    @Autowired
-    private TestSuitesRepository testSuitesRepository;
-    @Autowired
-    private StepsService stepsService;
-    @Autowired
-    private PublicStepsService publicStepsService;
-    @Autowired
-    private ResultsService resultsService;
-    @Autowired
-    private AgentsService agentsService;
-    @Autowired
-    private GlobalParamsRepository globalParamsRepository;
+public class TestSuitesServiceImpl extends SonicServiceImpl<TestSuitesMapper, TestSuites> implements TestSuitesService {
+
+    @Autowired private TestCasesMapper testCasesMapper;
+    @Autowired private ElementsMapper elementsMapper;
+    @Autowired private DevicesMapper devicesMapper;
+    @Autowired private ResultsService resultsService;
+    @Autowired private GlobalParamsService globalParamsService;
+    @Autowired private StepsService stepsService;
+    @Autowired private PublicStepsService publicStepsService;
+    @Autowired private TestSuitesTestCasesMapper testSuitesTestCasesMapper;
+    @Autowired private TestSuitesDevicesMapper testSuitesDevicesMapper;
 
     @Override
-    public RespModel runSuite(int suiteId, String strike) {
-        TestSuites testSuites;
-        if (testSuitesRepository.existsById(suiteId)) {
-            testSuites = testSuitesRepository.findById(suiteId).get();
+    public RespModel<String> runSuite(int suiteId, String strike) {
+        TestSuitesDTO testSuitesDTO;
+        if (existsById(suiteId)) {
+            testSuitesDTO = findById(suiteId);
         } else {
-            return new RespModel(3001, "测试套件已删除！");
+            return new RespModel<>(3001, "测试套件已删除！");
         }
-        Set<TestCases> testCasesSet = new HashSet<>(testSuites.getTestCases());
-        testSuites.setTestCases(new ArrayList<>(testCasesSet));
-        if (testSuites.getTestCases().size() == 0) {
-            return new RespModel(3002, "该测试套件内无测试用例！");
+
+        if (testSuitesDTO.getTestCases().size() == 0) {
+            return new RespModel<>(3002, "该测试套件内无测试用例！");
         }
-        List<Devices> devicesList = new ArrayList<>(testSuites.getDevices());
-        for (int i = devicesList.size() - 1; i >= 0; i--) {
-            if (devicesList.get(i).getStatus().equals(DeviceStatus.OFFLINE) || devicesList.get(i).getStatus().equals(DeviceStatus.DISCONNECTED)) {
-                devicesList.remove(devicesList.get(i));
-            }
-        }
+
+        List<Devices> devicesList = BeanTool.transformFromInBatch(testSuitesDTO.getDevices(), Devices.class);
         if (devicesList.size() == 0) {
-            return new RespModel(3003, "所选设备暂无可用！");
+            return new RespModel<>(3003, "所选设备暂无可用！");
         }
+
+        // 初始化部分结果状态信息
         Results results = new Results();
         results.setStatus(ResultStatus.RUNNING);
         results.setSuiteId(suiteId);
-        results.setSuiteName(testSuites.getName());
+        results.setSuiteName(testSuitesDTO.getName());
         results.setStrike(strike);
-        if (testSuites.getCover() == CoverType.CASE) {
-            results.setSendMsgCount(testSuites.getTestCases().size());
+        if (testSuitesDTO.getCover() == CoverType.CASE) {
+            results.setSendMsgCount(testSuitesDTO.getTestCases().size());
         }
-        if (testSuites.getCover() == CoverType.DEVICE) {
-            results.setSendMsgCount(testSuites.getTestCases().size() * testSuites.getDevices().size());
+        if (testSuitesDTO.getCover() == CoverType.DEVICE) {
+            results.setSendMsgCount(testSuitesDTO.getTestCases().size() * testSuitesDTO.getDevices().size());
         }
         results.setReceiveMsgCount(0);
-        results.setProjectId(testSuites.getProjectId());
-        resultsService.save(results);
+        results.setProjectId(testSuitesDTO.getProjectId());
+        resultsService.updateById(results);
+
         //组装全局参数为json对象
-        List<GlobalParams> globalParamsList = globalParamsRepository.findByProjectId(testSuites.getProjectId());
+        List<GlobalParams> globalParamsList = globalParamsService.findAll(testSuitesDTO.getProjectId());
+
         //将包含|的拆开多个参数并打乱，去掉json对象多参数的字段
         Map<String, List<String>> valueMap = new HashMap<>();
         JSONObject gp = new JSONObject();
@@ -94,20 +94,20 @@ public class TestSuitesServiceImpl implements TestSuitesService {
             }
         }
         int deviceIndex = 0;
-        if (testSuites.getCover() == CoverType.CASE) {
+        if (testSuitesDTO.getCover() == CoverType.CASE) {
             List<JSONObject> suiteDetail = new ArrayList<>();
             Set<Integer> agentIds = new HashSet<>();
-            for (TestCases testCases : testSuites.getTestCases()) {
+            for (TestCasesDTO testCases : testSuitesDTO.getTestCases()) {
                 JSONObject suite = new JSONObject();
                 List<JSONObject> steps = new ArrayList<>();
-                List<Steps> stepsList = stepsService.findByCaseIdOrderBySort(testCases.getId());
-                for (Steps s : stepsList) {
+                List<StepsDTO> stepsList = stepsService.findByCaseIdOrderBySort(testCases.getId());
+                for (StepsDTO s : stepsList) {
                     steps.add(getStep(s));
                 }
                 suite.put("steps", steps);
                 suite.put("cid", testCases.getId());
                 Devices devices = devicesList.get(deviceIndex);
-                suite.put("device", Arrays.asList(devices));
+                suite.put("device", List.of(devices));
                 if (deviceIndex == devicesList.size() - 1) {
                     deviceIndex = 0;
                 } else {
@@ -130,7 +130,7 @@ public class TestSuitesServiceImpl implements TestSuitesService {
             }
             JSONObject result = new JSONObject();
             result.put("msg", "suite");
-            result.put("pf",testSuites.getPlatform());
+            result.put("pf", testSuitesDTO.getPlatform());
             result.put("cases", suiteDetail);
             for (Integer id : agentIds) {
                 if(NettyServer.getMap().get(id)!=null) {
@@ -138,14 +138,14 @@ public class TestSuitesServiceImpl implements TestSuitesService {
                 }
             }
         }
-        if (testSuites.getCover() == CoverType.DEVICE) {
+        if (testSuitesDTO.getCover() == CoverType.DEVICE) {
             List<JSONObject> suiteDetail = new ArrayList<>();
             Set<Integer> agentIds = new HashSet<>();
-            for (TestCases testCases : testSuites.getTestCases()) {
+            for (TestCasesDTO testCases : testSuitesDTO.getTestCases()) {
                 JSONObject suite = new JSONObject();
                 List<JSONObject> steps = new ArrayList<>();
-                List<Steps> stepsList = stepsService.findByCaseIdOrderBySort(testCases.getId());
-                for (Steps s : stepsList) {
+                List<StepsDTO> stepsList = stepsService.findByCaseIdOrderBySort(testCases.getId());
+                for (StepsDTO s : stepsList) {
                     steps.add(getStep(s));
                 }
                 for (Devices devices : devicesList) {
@@ -170,7 +170,7 @@ public class TestSuitesServiceImpl implements TestSuitesService {
             }
             JSONObject result = new JSONObject();
             result.put("msg", "suite");
-            result.put("pf",testSuites.getPlatform());
+            result.put("pf", testSuitesDTO.getPlatform());
             result.put("cases", suiteDetail);
             for (Integer id : agentIds) {
                 if(NettyServer.getMap().get(id)!=null) {
@@ -190,40 +190,48 @@ public class TestSuitesServiceImpl implements TestSuitesService {
         }
         int suiteId = results.getSuiteId();
 
-        TestSuites testSuites;
-        if (testSuitesRepository.existsById(suiteId)) {
-            testSuites = testSuitesRepository.findById(suiteId).get();
+        TestSuitesDTO testSuitesDTO;
+        if (existsById(suiteId)) {
+            testSuitesDTO = findById(suiteId);
         } else {
             return new RespModel<>(3001, "测试套件已删除！");
         }
-        Set<TestCases> testCasesSet = new HashSet<>(testSuites.getTestCases());
-        testSuites.setTestCases(new ArrayList<>(testCasesSet));
-        if (testSuites.getTestCases().size() == 0) {
+
+        if (testSuitesDTO.getTestCases().size() == 0) {
             return new RespModel<>(3002, "该测试套件内无测试用例！");
         }
-        List<Devices> devicesList = new ArrayList<>(testSuites.getDevices());
+
+        List<Devices> devicesList = BeanTool.transformFromInBatch(testSuitesDTO.getDevices(), Devices.class);
+        for (int i = devicesList.size() - 1; i >= 0; i--) {
+            if (devicesList.get(i).getStatus().equals(DeviceStatus.OFFLINE) || devicesList.get(i).getStatus().equals(DeviceStatus.DISCONNECTED)) {
+                devicesList.remove(devicesList.get(i));
+            }
+        }
+        if (devicesList.size() == 0) {
+            return new RespModel<>(3003, "运行设备暂无法连接！");
+        }
 
         results.setStatus(ResultStatus.FAIL);
         results.setStrike(strike);
-        if (testSuites.getCover() == CoverType.CASE) {
-            results.setSendMsgCount(testSuites.getTestCases().size());
+        if (testSuitesDTO.getCover() == CoverType.CASE) {
+            results.setSendMsgCount(testSuitesDTO.getTestCases().size());
         }
-        if (testSuites.getCover() == CoverType.DEVICE) {
-            results.setSendMsgCount(testSuites.getTestCases().size() * testSuites.getDevices().size());
+        if (testSuitesDTO.getCover() == CoverType.DEVICE) {
+            results.setSendMsgCount(testSuitesDTO.getTestCases().size() * testSuitesDTO.getDevices().size());
         }
-        results.setProjectId(testSuites.getProjectId());
-        resultsService.save(results);
+        results.setProjectId(testSuitesDTO.getProjectId());
+        resultsService.updateById(results);
 
 
         int deviceIndex = 0;
-        if (testSuites.getCover() == CoverType.CASE) {
+        if (testSuitesDTO.getCover() == CoverType.CASE) {
             List<JSONObject> suiteDetail = new ArrayList<>();
             Set<Integer> agentIds = new HashSet<>();
-            for (TestCases testCases : testSuites.getTestCases()) {
+            for (TestCasesDTO testCases : testSuitesDTO.getTestCases()) {
                 JSONObject suite = new JSONObject();
                 suite.put("cid", testCases.getId());
                 Devices devices = devicesList.get(deviceIndex);
-                suite.put("device", Arrays.asList(devices));
+                suite.put("device", List.of(devices));
                 if (deviceIndex == devicesList.size() - 1) {
                     deviceIndex = 0;
                 } else {
@@ -235,7 +243,7 @@ public class TestSuitesServiceImpl implements TestSuitesService {
             }
             JSONObject result = new JSONObject();
             result.put("msg", "forceStopSuite");
-            result.put("pf",testSuites.getPlatform());
+            result.put("pf", testSuitesDTO.getPlatform());
             result.put("cases", suiteDetail);
             for (Integer id : agentIds) {
                 if(NettyServer.getMap().get(id)!=null) {
@@ -243,10 +251,10 @@ public class TestSuitesServiceImpl implements TestSuitesService {
                 }
             }
         }
-        if (testSuites.getCover() == CoverType.DEVICE) {
+        if (testSuitesDTO.getCover() == CoverType.DEVICE) {
             List<JSONObject> suiteDetail = new ArrayList<>();
             Set<Integer> agentIds = new HashSet<>();
-            for (TestCases testCases : testSuites.getTestCases()) {
+            for (TestCasesDTO testCases : testSuitesDTO.getTestCases()) {
                 JSONObject suite = new JSONObject();
                 for (Devices devices : devicesList) {
                     agentIds.add(devices.getAgentId());
@@ -258,7 +266,7 @@ public class TestSuitesServiceImpl implements TestSuitesService {
             }
             JSONObject result = new JSONObject();
             result.put("msg", "forceStopSuite");
-            result.put("pf",testSuites.getPlatform());
+            result.put("pf", testSuitesDTO.getPlatform());
             result.put("cases", suiteDetail);
             for (Integer id : agentIds) {
                 if(NettyServer.getMap().get(id)!=null) {
@@ -266,16 +274,26 @@ public class TestSuitesServiceImpl implements TestSuitesService {
                 }
             }
         }
-        return new RespModel(RespEnum.HANDLE_OK);
+        return new RespModel<>(RespEnum.HANDLE_OK);
     }
 
     @Override
-    public TestSuites findById(int id) {
-        if (testSuitesRepository.existsById(id)) {
-            TestSuites testSuites = testSuitesRepository.findById(id).get();
-            Set<TestCases> testCasesSet = new HashSet<>(testSuites.getTestCases());
-            testSuites.setTestCases(new ArrayList<>(testCasesSet));
-            return testSuites;
+    public TestSuitesDTO findById(int id) {
+        if (existsById(id)) {
+            TestSuitesDTO testSuitesDTO = baseMapper.selectById(id).convertTo();
+            int suiteId = testSuitesDTO.getId();
+
+            // 填充testcase
+            List<TestCasesDTO> testCasesDTOList = testCasesMapper.listByTestSuitesId(suiteId)
+                    .stream().map(TypeConverter::convertTo).collect(Collectors.toList());
+            testSuitesDTO.setTestCases(testCasesDTOList);
+
+            // 填充devices
+            List<DevicesDTO> devicesDTOList = devicesMapper.listByTestSuitesId(suiteId)
+                    .stream().map(TypeConverter::convertTo).collect(Collectors.toList());
+            testSuitesDTO.setDevices(devicesDTOList);
+
+            return testSuitesDTO;
         } else {
             return null;
         }
@@ -288,13 +306,13 @@ public class TestSuitesServiceImpl implements TestSuitesService {
      * @des 递归获取步骤
      * @date 2021/8/20 17:50
      */
-    private JSONObject getStep(Steps steps) {
+    private JSONObject getStep(StepsDTO steps) {
         JSONObject step = new JSONObject();
         if (steps.getStepType().equals("publicStep")) {
-            PublicSteps publicSteps = publicStepsService.findById(Integer.parseInt(steps.getText()));
-            if (publicSteps != null) {
+            PublicStepsDTO publicStepsDTO = publicStepsService.findById(Integer.parseInt(steps.getText()));
+            if (publicStepsDTO != null) {
                 JSONArray publicStepsJson = new JSONArray();
-                for (Steps pubStep : publicSteps.getSteps()) {
+                for (StepsDTO pubStep : publicStepsDTO.getSteps()) {
                     publicStepsJson.add(getStep(pubStep));
                 }
                 step.put("pubSteps", publicStepsJson);
@@ -306,42 +324,63 @@ public class TestSuitesServiceImpl implements TestSuitesService {
 
     @Override
     public boolean delete(int id) {
-        if (testSuitesRepository.existsById(id)) {
-            testSuitesRepository.deleteById(id);
-            return true;
-        } else {
-            return false;
+        return baseMapper.deleteById(id) > 0;
+    }
+
+    @Override
+    public void saveTestSuites(TestSuitesDTO testSuitesDTO) {
+        int suiteId = testSuitesDTO.getId();
+        List<TestCasesDTO> testCases = testSuitesDTO.getTestCases();
+        List<DevicesDTO> devices = testSuitesDTO.getDevices();
+
+        // 保存testcase映射
+        for (TestCasesDTO testCase : testCases) {
+            testSuitesTestCasesMapper.insert(
+                    new TestSuitesTestCases().setTestSuitesId(suiteId).setTestCasesId(testCase.getId())
+            );
+        }
+
+        // 保存devices映射
+        for (DevicesDTO device : devices) {
+            testSuitesDevicesMapper.insert(
+                    new TestSuitesDevices().setTestSuitesId(suiteId).setDevicesId(device.getId())
+            );
         }
     }
 
     @Override
-    public void save(TestSuites testSuites) {
-        testSuitesRepository.save(testSuites);
+    public CommentPage<TestSuitesDTO> findByProjectId(int projectId, String name, Page<TestSuites> pageable) {
+
+        LambdaQueryChainWrapper<TestSuites> lambdaQuery = lambdaQuery();
+
+        if (projectId != 0) {
+            lambdaQuery.eq(TestSuites::getProjectId, projectId);
+        }
+        if (name != null && name.length() > 0) {
+            lambdaQuery.like(TestSuites::getName, name);
+        }
+
+        lambdaQuery.orderByDesc(TestSuites::getId);
+        Page<TestSuites> page = lambdaQuery.page(pageable);
+
+        List<TestSuitesDTO> testSuitesDTOList = page.getRecords()
+                // 转换 + 填充 testcase 和 devices
+                .stream().map(e -> findById(e.getId())).collect(Collectors.toList());
+
+        return CommentPage.convertFrom(page, testSuitesDTOList);
     }
 
     @Override
-    public Page<TestSuites> findByProjectId(int projectId, String name, Pageable pageable) {
-        Specification<TestSuites> spc = (root, query, cb) -> {
-            List<Predicate> predicateList = new ArrayList<>();
-            if (projectId != 0) {
-                predicateList.add(cb.and(cb.equal(root.get("projectId"), projectId)));
-            }
-            if (name != null && name.length() > 0) {
-                predicateList.add(cb.and(cb.like(root.get("name"), "%" + name + "%")));
-            }
-            query.orderBy(cb.desc(root.get("id")));
-            if (predicateList.size() != 0) {
-                Predicate[] p = new Predicate[predicateList.size()];
-                return query.where(predicateList.toArray(p)).getRestriction();
-            } else {
-                return query.getRestriction();
-            }
-        };
-        return testSuitesRepository.findAll(spc, pageable);
+    public List<TestSuitesDTO> findByProjectId(int projectId) {
+        return lambdaQuery().eq(TestSuites::getProjectId, projectId)
+                .orderByDesc(TestSuites::getId)
+                .list()
+                // 转换 + 填充 testcase 和 devices
+                .stream().map(e -> findById(e.getId())).collect(Collectors.toList());
     }
 
     @Override
-    public List<TestSuites> findByProjectId(int projectId) {
-        return testSuitesRepository.findByProjectId(projectId, Sort.by(Sort.Direction.DESC, "id"));
+    public boolean deleteByProjectId(int projectId) {
+        return baseMapper.delete(new LambdaQueryWrapper<TestSuites>().eq(TestSuites::getProjectId, projectId)) > 0;
     }
 }
